src/objects/CSARequests__c.object
<CustomObject>
    <description>Client Services Administrations Page</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account task is associated with.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SPA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SPA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CSA_Request__c</fullName>
        <description>List of the possible requests that could be made of CSA</description>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add/Edit Salesforce contacts</fullName>
                </value>
                <value>
                    <fullName>Advisory Board Support</fullName>
                </value>
                <value>
                    <fullName>Ambassador Program Request</fullName>
                </value>
                <value>
                    <fullName>Business Cards</fullName>
                </value>
                <value>
                    <fullName>Campaign Assistance</fullName>
                </value>
                <value>
                    <fullName>Campus Activation Event</fullName>
                </value>
                <value>
                    <fullName>Check Request</fullName>
                </value>
                <value>
                    <fullName>Client Forum Support</fullName>
                </value>
                <value>
                    <fullName>Collateral or Presentations</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Conference Presentation Assistance</fullName>
                </value>
                <value>
                    <fullName>Conference Presentation Proposal</fullName>
                </value>
                <value>
                    <fullName>Conference Registration</fullName>
                </value>
                <value>
                    <fullName>Create Brand Name</fullName>
                </value>
                <value>
                    <fullName>Data Depersonalization Request</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Marketing Request</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Research</fullName>
                </value>
                <value>
                    <fullName>New/Renew Association Membership</fullName>
                </value>
                <value>
                    <fullName>New Collateral</fullName>
                </value>
                <value>
                    <fullName>Off-board Client</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pre-Conference Email</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales Meeting / In-Person Support</fullName>
                </value>
                <value>
                    <fullName>Presentation Content Assistance</fullName>
                </value>
                <value>
                    <fullName>President Pre-Renewal Letter</fullName>
                </value>
                <value>
                    <fullName>Print/Copy Materials</fullName>
                </value>
                <value>
                    <fullName>Purchasing Assistance</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Return School Copy of Contract</fullName>
                </value>
                <value>
                    <fullName>Salesforce Admininstrator Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campiagn that the task is associated with.</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>SPA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case that the request is associated with.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>SPA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conference_End_Date__c</fullName>
        <label>Conference End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conference_Start_Date__c</fullName>
        <label>Conference Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <description>Please put in the details here</description>
        <inlineHelpText>Please put in the details here</inlineHelpText>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>The date the task needs to be completed</description>
        <label>Due/Proposal Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engagement_Partner_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox if the request being submitted is specifically for ENGAGEMENT PARTNERS only - not for the SCHOOL CHANNEL.</description>
        <inlineHelpText>Select this checkbox if the request being submitted is specifically for ENGAGEMENT PARTNERS only - otherwise, leave this field blank.</inlineHelpText>
        <label>Engagement Partner Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Attendees__c</fullName>
        <label>Expected Attendees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Link_to_Proposal_Site__c</fullName>
        <label>Link to Proposal Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity that the request is associated with.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>SPA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Presenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposed Presenter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CSA Requests</relationshipLabel>
        <relationshipName>CSA_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of SPA request</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suggested_Topic__c</fullName>
        <label>Suggested Topic</label>
        <type>TextArea</type>
    </fields>
    <label>CSA Requests</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Caroline_s_Requests</fullName>
        <columns>Assigned_to__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CSA_Request__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Due_Date__c</columns>
        <columns>Completed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to__c</field>
            <operation>equals</operation>
            <value>Caroline Barry</value>
        </filters>
        <label>Caroline&apos;s Requests</label>
    </listViews>
    <listViews>
        <fullName>Chris_James_Requests</fullName>
        <columns>NAME</columns>
        <columns>Assigned_to__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>James</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>Chris James Requests</label>
    </listViews>
    <listViews>
        <fullName>Conference_Presentation_CSAs</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CSARequests__c.Pro_Services_Request</value>
        </filters>
        <label>Conference Presentation CSAs</label>
    </listViews>
    <listViews>
        <fullName>David_s_Completed_Requests</fullName>
        <columns>CSA_Request__c</columns>
        <columns>NAME</columns>
        <columns>Completed_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to__c</field>
            <operation>contains</operation>
            <value>Aron</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>David&apos;s Completed Requests</label>
    </listViews>
    <listViews>
        <fullName>David_s_Open_Requests</fullName>
        <columns>CSA_Request__c</columns>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to__c</field>
            <operation>contains</operation>
            <value>Aron</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>David&apos;s Open Requests</label>
    </listViews>
    <listViews>
        <fullName>Della_s_Requests</fullName>
        <columns>NAME</columns>
        <columns>Assigned_to__c</columns>
        <columns>CSA_Request__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Due_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to__c</field>
            <operation>contains</operation>
            <value>Della</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>Della&apos;s Requests</label>
    </listViews>
    <listViews>
        <fullName>Jill_s_Requests</fullName>
        <columns>NAME</columns>
        <columns>Assigned_to__c</columns>
        <columns>Account__c</columns>
        <columns>Details__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to__c</field>
            <operation>contains</operation>
            <value>Jill</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>Jill&apos;s Requests</label>
    </listViews>
    <listViews>
        <fullName>Kate_s_Completed_Requests</fullName>
        <columns>NAME</columns>
        <columns>CSA_Request__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to__c</field>
            <operation>contains</operation>
            <value>Muir</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Kate&apos;s Completed Requests</label>
    </listViews>
    <listViews>
        <fullName>Kate_s_Open_Requests</fullName>
        <columns>NAME</columns>
        <columns>CSA_Request__c</columns>
        <columns>Details__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to__c</field>
            <operation>contains</operation>
            <value>Muir</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>Kate&apos;s Open Requests</label>
    </listViews>
    <listViews>
        <fullName>New_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Assigned_to__c</columns>
        <columns>Account__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <sharedTo>
            <role>TopLevel</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pro_Services_Requests</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Status__c</columns>
        <columns>CSA_Request__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CSARequests__c.Pro_Services_Request</value>
        </filters>
        <label>Pro Services Requests</label>
        <sharedTo>
            <group>ASAProfessionalServices</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ryan_s_Completed_Weekly_Tasks</fullName>
        <columns>Assigned_to__c</columns>
        <columns>NAME</columns>
        <columns>CSA_Request__c</columns>
        <columns>Completed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to__c</field>
            <operation>contains</operation>
            <value>Ryan</value>
        </filters>
        <filters>
            <field>Completed_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Ryan&apos;s Completed Weekly Tasks</label>
    </listViews>
    <listViews>
        <fullName>Ryan_s_Requests</fullName>
        <columns>CSA_Request__c</columns>
        <columns>NAME</columns>
        <columns>Details__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to__c</field>
            <operation>contains</operation>
            <value>Ryan</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>Ryan&apos;s Requests</label>
    </listViews>
    <listViews>
        <fullName>Salesforce_Admininstrator_Requests</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>Assigned_to__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to__c</field>
            <operation>contains</operation>
            <value>Andrew,Jane</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CSARequests__c.CSA_Request</value>
        </filters>
        <filters>
            <field>CSA_Request__c</field>
            <operation>equals</operation>
            <value>Salesforce Admininstrator Request</value>
        </filters>
        <label>Salesforce Admininstrator Requests</label>
    </listViews>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSA Requests</pluralLabel>
    <recordTypes>
        <fullName>CSA_Request</fullName>
        <active>true</active>
        <description>Use this record type for any request other than Conference Presentation Assistance</description>
        <label>CSA Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pro_Services_Request</fullName>
        <active>true</active>
        <description>Use this record type ONLY for Conference Presentation Assistance</description>
        <label>Pro Services Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Conf_Presentation_Prop_Required_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Pro_Services_Request&apos; &amp;&amp; ISPICKVAL(CSA_Request__c,&apos;Conference Presentation Proposal&apos;) &amp;&amp; (ISNULL(Due_Date__c)|| ISNULL(Conference_End_Date__c)||ISNULL(Conference_Start_Date__c)|| ISNULL(Expected_Attendees__c))</errorConditionFormula>
        <errorMessage>Due/Proposal Deadline,Start Date,EndDate,Expected Attendees are required fields for this Request Type .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pre_Sales_Meeting_Required_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Pro_Services_Request&apos; &amp;&amp;  (ISPICKVAL(CSA_Request__c,&apos;Pre-Sales Meeting / In-Person Support&apos;) || ISPICKVAL(CSA_Request__c,&apos;Salt Demo / Webinar&apos;)) &amp;&amp; (ISBLANK(Details__c)|| ISNULL(Meeting_Date__c))</errorConditionFormula>
        <errorMessage>Details and Meeting Date are required fields for this Request Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Presentation_Content_Required_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Pro_Services_Request&apos; &amp;&amp;  ISPICKVAL(CSA_Request__c,&apos;Presentation Content Assistance&apos;) &amp;&amp; (ISNULL(Due_Date__c) || ISBLANK(Details__c))</errorConditionFormula>
        <errorMessage>Due/Proposal Deadline and Details are required fields for this Request Type .</errorMessage>
    </validationRules>
</CustomObject>